- Added logging